chore: merge pull request goinfinite#193
