# src/presentation/api/docs/swagger.yaml
@@ -153,6 +153,15 @@ definitions:
       targetValue:
         type: string
     type: object
+  dto.CreateSecureAccessPublicKey:
+    properties:
+      accountId:
+        type: integer
+      content:
+        type: string
+      name:
+        type: string
+    type: object
   dto.CreateSessionToken:
     properties:
       password:
@@ -303,6 +312,15 @@ definitions:
         type: string
       sortDirection:
         type: string
+    type: object
+  dto.ReadAccountsResponse:
+    properties:
+      accounts:
+        items:
+          $ref: '#/definitions/entity.Account'
+        type: array
+      pagination:
+        $ref: '#/definitions/dto.Pagination'
     type: object
   dto.ReadCronsResponse:
     properties:
@@ -508,8 +526,14 @@ definitions:
         type: integer
       groupId:
         type: integer
+      homeDirectory:
+        type: string
       id:
         type: integer
+      secureAccessPublicKeys:
+        items:
+          $ref: '#/definitions/entity.SecureAccessPublicKey'
+        type: array
       updatedAt:
         type: integer
       username:
@@ -833,6 +857,21 @@ definitions:
       updatedAt:
         type: integer
     type: object
+  entity.SecureAccessPublicKey:
+    properties:
+      accountId:
+        type: integer
+      createdAt:
+        type: integer
+      fingerprint:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updatedAt:
+        type: integer
+    type: object
   entity.SslCertificate:
     properties:
       altNames:
@@ -1018,15 +1057,47 @@ paths:
       consumes:
       - application/json
       description: List accounts.
+      parameters:
+      - description: Id
+        in: query
+        name: id
+        type: string
+      - description: Username
+        in: query
+        name: username
+        type: string
+      - description: ShouldIncludeSecureAccessPublicKeys (only works if OpenSSH service
+          is installed)
+        in: query
+        name: shouldIncludeSecureAccessPublicKeys
+        type: boolean
+      - description: PageNumber (Pagination)
+        in: query
+        name: pageNumber
+        type: integer
+      - description: ItemsPerPage (Pagination)
+        in: query
+        name: itemsPerPage
+        type: integer
+      - description: SortBy (Pagination)
+        in: query
+        name: sortBy
+        type: string
+      - description: SortDirection (Pagination)
+        in: query
+        name: sortDirection
+        type: string
+      - description: LastSeenId (Pagination)
+        in: query
+        name: lastSeenId
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/entity.Account'
-            type: array
+            $ref: '#/definitions/dto.ReadAccountsResponse'
       security:
       - Bearer: []
       summary: ReadAccounts
@@ -1052,7 +1123,7 @@ paths:
             type: object
       security:
       - Bearer: []
-      summary: CreateNewAccount
+      summary: CreateAccount
       tags:
       - account
     put:
@@ -1099,6 +1170,55 @@ paths:
       security:
       - Bearer: []
       summary: DeleteAccount
+      tags:
+      - account
+  /v1/account/secure-access-public-key/:
+    post:
+      consumes:
+      - application/json
+      description: Create a new secure access public key.
+      parameters:
+      - description: '''name'' is optional. Will only become required if there is
+          no name in ''content''. If the ''name'' is provided, it will overwrite the
+          name in the ''content''.'
+        in: body
+        name: createSecureAccessPublicKey
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateSecureAccessPublicKey'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: SecureAccessPublicKeyCreated
+          schema:
+            type: object
+      security:
+      - Bearer: []
+      summary: CreateSecureAccessPublicKey
+      tags:
+      - account
+  /v1/account/secure-access-public-key/{secureAccessPublicKeyId}/:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a secure access public key.
+      parameters:
+      - description: SecureAccessPublicKeyId to delete.
+        in: path
+        name: secureAccessPublicKeyId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: SecureAccessPublicKeyDeleted
+          schema:
+            type: object
+      security:
+      - Bearer: []
+      summary: DeleteSecureAccessPublicKey
       tags:
       - account
   /v1/auth/login/:
