# src/presentation/cli/controller/account.go
@@ -21,13 +21,80 @@ func NewAccountController(
 }
 
 func (controller *AccountController) Read() *cobra.Command {
+	var accountIdUint64 uint64
+	var accountUsernameStr, shouldIncludeSecureAccessPublicKeysStr string
+	var paginationPageNumberUint32 uint32
+	var paginationItemsPerPageUint16 uint16
+	var paginationSortByStr, paginationSortDirectionStr, paginationLastSeenIdStr string
+
 	cmd := &cobra.Command{
 		Use:   "get",
-		Short: "GetAccounts",
+		Short: "ReadAccounts",
 		Run: func(cmd *cobra.Command, args []string) {
-			cliHelper.ServiceResponseWrapper(controller.accountService.Read())
+			requestBody := map[string]interface{}{
+				"shouldIncludeSecureAccessPublicKeys": shouldIncludeSecureAccessPublicKeysStr,
+			}
+
+			if accountIdUint64 != 0 {
+				requestBody["id"] = accountIdUint64
+			}
+
+			if accountUsernameStr != "" {
+				requestBody["username"] = accountUsernameStr
+			}
+
+			if paginationPageNumberUint32 != 0 {
+				requestBody["pageNumber"] = paginationPageNumberUint32
+			}
+
+			if paginationItemsPerPageUint16 != 0 {
+				requestBody["itemsPerPage"] = paginationItemsPerPageUint16
+			}
+
+			if paginationSortByStr != "" {
+				requestBody["sortBy"] = paginationSortByStr
+			}
+
+			if paginationSortDirectionStr != "" {
+				requestBody["sortDirection"] = paginationSortDirectionStr
+			}
+
+			if paginationLastSeenIdStr != "" {
+				requestBody["lastSeenId"] = paginationLastSeenIdStr
+			}
+
+			cliHelper.ServiceResponseWrapper(
+				controller.accountService.Read(requestBody),
+			)
 		},
 	}
+
+	cmd.Flags().Uint64VarP(&accountIdUint64, "account-id", "i", 0, "AccountId")
+	cmd.Flags().StringVarP(
+		&accountUsernameStr, "account-username", "n", "", "AccountUsername",
+	)
+	cmd.Flags().StringVarP(
+		&shouldIncludeSecureAccessPublicKeysStr,
+		"should-include-secure-access-public-keys", "s", "false",
+		"ShouldIncludeSecureAccessPublicKeys",
+	)
+	cmd.Flags().Uint32VarP(
+		&paginationPageNumberUint32, "page-number", "p", 0, "PageNumber (Pagination)",
+	)
+	cmd.Flags().Uint16VarP(
+		&paginationItemsPerPageUint16, "items-per-page", "m", 0,
+		"ItemsPerPage (Pagination)",
+	)
+	cmd.Flags().StringVarP(
+		&paginationSortByStr, "sort-by", "y", "", "SortBy (Pagination)",
+	)
+	cmd.Flags().StringVarP(
+		&paginationSortDirectionStr, "sort-direction", "r", "",
+		"SortDirection (Pagination)",
+	)
+	cmd.Flags().StringVarP(
+		&paginationLastSeenIdStr, "last-seen-id", "l", "", "LastSeenId (Pagination)",
+	)
 
 	return cmd
 }
@@ -58,7 +125,8 @@ func (controller *AccountController) Create() *cobra.Command {
 }
 
 func (controller *AccountController) Update() *cobra.Command {
-	var accountIdStr, usernameStr, passwordStr, shouldUpdateApiKeyStr string
+	var accountIdUint64 uint64
+	var usernameStr, passwordStr, shouldUpdateApiKeyStr string
 
 	cmd := &cobra.Command{
 		Use:   "update",
@@ -68,8 +136,8 @@ func (controller *AccountController) Update() *cobra.Command {
 				"shouldUpdateApiKey": shouldUpdateApiKeyStr,
 			}
 
-			if accountIdStr != "" {
-				requestBody["accountId"] = accountIdStr
+			if accountIdUint64 != 0 {
+				requestBody["accountId"] = accountIdUint64
 			}
 
 			if usernameStr != "" {
@@ -86,7 +154,7 @@ func (controller *AccountController) Update() *cobra.Command {
 		},
 	}
 
-	cmd.Flags().StringVarP(&accountIdStr, "account-id", "i", "", "AccountId")
+	cmd.Flags().Uint64VarP(&accountIdUint64, "account-id", "i", 0, "AccountId")
 	cmd.Flags().StringVarP(&usernameStr, "username", "u", "", "Username")
 	cmd.Flags().StringVarP(&passwordStr, "password", "p", "", "Password")
 	cmd.Flags().StringVarP(
@@ -96,14 +164,14 @@ func (controller *AccountController) Update() *cobra.Command {
 }
 
 func (controller *AccountController) Delete() *cobra.Command {
-	var accountIdStr string
+	var accountIdUint64 uint64
 
 	cmd := &cobra.Command{
 		Use:   "delete",
 		Short: "DeleteAccount",
 		Run: func(cmd *cobra.Command, args []string) {
 			requestBody := map[string]interface{}{
-				"accountId": accountIdStr,
+				"accountId": accountIdUint64,
 			}
 
 			cliHelper.ServiceResponseWrapper(
@@ -112,7 +180,72 @@ func (controller *AccountController) Delete() *cobra.Command {
 		},
 	}
 
-	cmd.Flags().StringVarP(&accountIdStr, "account-id", "i", "", "AccountId")
+	cmd.Flags().Uint64VarP(&accountIdUint64, "account-id", "i", 0, "AccountId")
 	cmd.MarkFlagRequired("account-id")
+	return cmd
+}
+
+func (controller *AccountController) CreateSecureAccessPublicKey() *cobra.Command {
+	var accountIdUint64 uint64
+	var keyNameStr, keyContentStr string
+
+	cmd := &cobra.Command{
+		Use:   "create-public-key",
+		Short: "CreateSecureAccessPublicKey",
+		Run: func(cmd *cobra.Command, args []string) {
+			requestBody := map[string]interface{}{
+				"accountId": accountIdUint64,
+				"content":   keyContentStr,
+			}
+
+			if keyNameStr != "" {
+				requestBody["name"] = keyNameStr
+			}
+
+			cliHelper.ServiceResponseWrapper(
+				controller.accountService.CreateSecureAccessPublicKey(requestBody),
+			)
+		},
+	}
+
+	cmd.Flags().Uint64VarP(&accountIdUint64, "account-id", "u", 0, "AccountId")
+	cmd.MarkFlagRequired("account-id")
+	cmd.Flags().StringVarP(
+		&keyNameStr, "public-key-name", "n", "", "SecureAccessPublicKeyName",
+	)
+	cmd.Flags().StringVarP(
+		&keyContentStr, "public-key-content", "c", "", "SecureAccessPublicKeyContent",
+	)
+	cmd.MarkFlagRequired("public-key-content")
+	return cmd
+}
+
+func (controller *AccountController) DeleteSecureAccessPublicKey() *cobra.Command {
+	var accountIdUint64 uint64
+	var keyIdUint16 uint16
+
+	cmd := &cobra.Command{
+		Use:   "delete-key",
+		Short: "DeleteSecureAccessPublicKey",
+		Run: func(cmd *cobra.Command, args []string) {
+			requestBody := map[string]interface{}{
+				"accountId": accountIdUint64,
+				"id":        keyIdUint16,
+			}
+
+			cliHelper.ServiceResponseWrapper(
+				controller.accountService.DeleteSecureAccessPublicKey(requestBody),
+			)
+		},
+	}
+
+	cmd.Flags().Uint64VarP(
+		&accountIdUint64, "account-id", "u", 0, "AccountId",
+	)
+	cmd.MarkFlagRequired("account-id")
+	cmd.Flags().Uint16VarP(
+		&keyIdUint16, "public-key-id", "i", 0, "SecureAccessPublicKeyId",
+	)
+	cmd.MarkFlagRequired("public-key-id")
 	return cmd
 }
