# src/presentation/cli/router.go
@@ -51,6 +51,8 @@ func (router Router) accountRoutes() {
 	accountCmd.AddCommand(accountController.Create())
 	accountCmd.AddCommand(accountController.Update())
 	accountCmd.AddCommand(accountController.Delete())
+	accountCmd.AddCommand(accountController.CreateSecureAccessPublicKey())
+	accountCmd.AddCommand(accountController.DeleteSecureAccessPublicKey())
 }
 
 func (router Router) authenticationRoutes() {
